<resources>
    <string name="app_name">QuizApp</string>
    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="question3">Question 3</string>
    <string name="question4">Question 4</string>
    <string name="question5">Question 5</string>
    <string name="question6">Question 6</string>
    <string name="question7">Question 7</string>
    <string name="question8">Question 8</string>
    <string name="q1">Grand Central Terminal, Park Avenue,New York is the world\'s</string>
    <string name="q2">What chemical, found in many living organisms, is this compound of carbon, hydrogen and nitrogen, C5H9N3?</string>
    <string name="q3">In 2018 which country is the world\'s leading producer of fresh dates?</string>
    <string name="q4">Which of these is a board game?</string>
    <string name="q5">After the Rolling Stones released their first LP, who was the first person to leave the band?</string>
    <string name="q6">What is a bichon frise?</string>
    <string name="q7">For whom was the Ark Royal, one of the largest vessels in Queen Elizabeth I\'s fleet and the flagship of Lord High Admiral Howard during England's fight against the Spanish Armada, originally made in 1586?</string>
    <string name="q8">Which one is programming language/languages ?</string>
    <string name="answ1_1">largest railway station</string>
    <string name="answ2_1">highest railway station</string>
    <string name="answ3_1">longest railway station</string>
    <string name="answ4_1">None of the above</string>
    <string name="answ1_2">Adrenaline</string>
    <string name="answ2_2">Histamine</string>
    <string name="answ3_2">Dopamine</string>
    <string name="answ4_2">Choline</string>
    <string name="answ1_3">Egypt</string>
    <string name="answ2_3">Morocco</string>
    <string name="answ3_3">India</string>
    <string name="answ4_3">Mongolia</string>
    <string name="answ1_4">Go</string>
    <string name="answ2_4">Come</string>
    <string name="answ3_4">Stay</string>
    <string name="answ4_4">Sit</string>
    <string name="answ1_5">Brian Jones</string>
    <string name="answ2_5">Mick Taylor</string>
    <string name="answ3_5">Bill Wyman</string>
    <string name="answ4_5">Bobby Keys</string>
    <string name="answ1_6">Wind</string>
    <string name="answ2_6">Lettuce</string>
    <string name="answ3_6">Dog</string>
    <string name="answ4_6">Muscle</string>
    <string name="answ1_8">C</string>
    <string name="answ2_8">C 2</string>
    <string name="answ3_8">Turkish</string>
    <string name="answ4_8">Python</string>
    <string name="money1">500 000$</string>
    <string name="money2">250 000$</string>
    <string name="money3">100 000$</string>
    <string name="money4">50 000$</string>
    <string name="money5">20 000$</string>
    <string name="money6">10 000$</string>
    <string name="money7">5 000$</string>
    <string name="money8">1 000$</string>
    <string name="money9">0$</string>
    <string name="money">Money: 0$</string>
    <string name="money1000">Money: 1 000$</string>
    <string name="money5000">Money: 5 000$</string>
    <string name="moneyOn">Money: 10 000$</string>
    <string name="moneyYirmi">Money: 20 000$</string>
    <string name="moneyElli">Money: 50 000$</string>
    <string name="moneyYuz">Money: 100 000$</string>
    <string name="moneyİkiYuz">Money: 250 000$</string>
    <string name="moneyBesYuz">Money: 500 000$</string>
    <string name="result">Money: </string>
    <string name="again">AGAIN</string>
    <string name="next">next</string>
    <string name="nextQuestion">next</string>
    <string name="answer">Answer</string>
    <string name="start">Start</string>
    <string name="name_app">Quiz Game</string>
    <string name="submit">SUBMIT</string>


</resources>
