<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:id="@+id/relative">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7"
                android:textSize="32sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/answer"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/money1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money1"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/money2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money2"
                android:textSize="20sp"
                android:background="#ff4283"/>
            <TextView
                android:id="@+id/money3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money3"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/money4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money4"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/money5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money5"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/money6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money6"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/money7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money7"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/money8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money8"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/money_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:text="@string/money5000"
        android:textAlignment="center"
        android:textSize="30sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="#ff4182"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="next_question"
        android:id="@+id/button" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="submit" />
</RelativeLayout>
</ScrollView>