<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:textSize="50sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money9"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:textColor="#000000"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="50sp"
        android:background="@color/colorAccent"
        android:text="@string/again"
        android:textSize="50sp"
        android:onClick="again"/>

</LinearLayout>
</ScrollView>